# spymaster

./: HowToPlay.md  README.md  pyproject.toml
.github/workflows/: build.yml
spymaster/: __init__.py  __main__.py  aim.py  gene_pool.py  online_player.py  players.py  spymaster.py  webserver.py
spymaster/players/: __init__.py  aim.py  computer_players.py  evolutionary_players.py  neural_player.py  online_player.py
spymaster/static/: spymaster.css  spymaster.js  spymaster.ts
spymaster/templates/: base.html  help.html  main.html
spymaster/tests/: test_evolutionary_players.py  test_round_robin.py
