[project]
name = "spymaster"
version = "0.2.0"
description = ""
authors = [{ name = "J. M. F. Tsang", email = "j.m.f.tsang@cantab.net" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "jinja2>=3.1.6",
    "flake8>=6.1.0",
    "websockets>=12.0",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "commonmark>=0.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
    "ty>=0.0.53",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
